--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <None Remove="ClientApp\app\components\colapse\colapse.component.ts" />
+    <None Remove="ClientApp\app\components\contact\contact.component.ts" />
     <None Remove="ClientApp\app\components\panel\panel.component.ts" />
     <None Remove="ClientApp\app\components\tweet\tweet.component.ts" />
     <None Remove="ClientApp\app\directives\input-format.directive.ts" />
@@ -33,6 +34,7 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\app\components\colapse\colapse.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\contact\contact.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\panel\panel.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\tweet\tweet.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\directives\input-format.directive.ts" />
