--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -29,7 +29,9 @@
     <None Remove="ClientApp\app\components\tweet\tweet.component.ts" />
     <None Remove="ClientApp\app\directives\input-format.directive.ts" />
     <None Remove="ClientApp\app\models\product.ts" />
+    <None Remove="ClientApp\app\models\supplier.ts" />
     <None Remove="ClientApp\app\services\product.service.ts" />
+    <None Remove="ClientApp\app\services\supplier.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,7 +41,9 @@
     <TypeScriptCompile Include="ClientApp\app\components\tweet\tweet.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\directives\input-format.directive.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\product.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\supplier.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\product.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\supplier.service.ts" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
