--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -25,7 +25,11 @@
   <ItemGroup>
     <None Remove="ClientApp\app\components\colapse\colapse.component.ts" />
     <None Remove="ClientApp\app\components\contact\contact.component.ts" />
+    <None Remove="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
     <None Remove="ClientApp\app\components\panel\panel.component.ts" />
+    <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
+    <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
+    <None Remove="ClientApp\app\components\reactiveForm\username.validators.ts" />
     <None Remove="ClientApp\app\components\tweet\tweet.component.ts" />
     <None Remove="ClientApp\app\directives\input-format.directive.ts" />
     <None Remove="ClientApp\app\models\product.ts" />
@@ -37,7 +41,11 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\app\components\colapse\colapse.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\contact\contact.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\panel\panel.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\username.validators.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\tweet\tweet.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\directives\input-format.directive.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\product.ts" />
