--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -27,6 +27,7 @@
     <None Remove="ClientApp\app\components\contact\contact.component.ts" />
     <None Remove="ClientApp\app\components\filter-supplier\filter-supplier.component.ts" />
     <None Remove="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
+    <None Remove="ClientApp\app\components\ngx-bootstrap\ngx.component.ts" />
     <None Remove="ClientApp\app\components\panel\panel.component.ts" />
     <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
     <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
@@ -44,6 +45,7 @@
     <TypeScriptCompile Include="ClientApp\app\components\contact\contact.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\filter-supplier\filter-supplier.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\ngx-bootstrap\ngx.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\panel\panel.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
