--- a/Estudos_Angular/package.json
+++ b/Estudos_Angular/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@angular/animations": "4.2.5",
+    "@angular/cli": "^1.6.5",
     "@angular/common": "4.2.5",
     "@angular/compiler": "4.2.5",
     "@angular/compiler-cli": "4.2.5",
@@ -46,6 +47,7 @@
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-webpack": "2.0.3",
+    "popper.js": "^1.12.9",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
