--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -40,6 +40,7 @@
     <None Remove="ClientApp\app\directives\input-format.directive.ts" />
     <None Remove="ClientApp\app\models\product.ts" />
     <None Remove="ClientApp\app\models\supplier.ts" />
+    <None Remove="ClientApp\app\services\data.service.ts" />
     <None Remove="ClientApp\app\services\posts.service.ts" />
     <None Remove="ClientApp\app\services\product.service.ts" />
     <None Remove="ClientApp\app\services\supplier.service.ts" />
@@ -64,6 +65,7 @@
     <TypeScriptCompile Include="ClientApp\app\directives\input-format.directive.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\product.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\supplier.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\data.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\posts.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\product.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\supplier.service.ts" />
