--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -34,6 +34,7 @@
     <None Remove="ClientApp\app\components\github-profile\github-profile.component.ts" />
     <None Remove="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
     <None Remove="ClientApp\app\components\ngx-bootstrap\ngx.component.ts" />
+    <None Remove="ClientApp\app\components\not-found\not-found.component.ts" />
     <None Remove="ClientApp\app\components\panel\panel.component.ts" />
     <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
     <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
@@ -61,6 +62,7 @@
     <TypeScriptCompile Include="ClientApp\app\components\github-profile\github-profile.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\ngx-bootstrap\ngx.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\not-found\not-found.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\panel\panel.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
