--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -27,23 +27,30 @@
     <None Remove="ClientApp\app\common\app-error.ts" />
     <None Remove="ClientApp\app\common\not-exist-error.ts" />
     <None Remove="ClientApp\app\common\not-found-error.ts" />
+    <None Remove="ClientApp\app\components\admin\admin.component.ts" />
     <None Remove="ClientApp\app\components\colapse\colapse.component.ts" />
     <None Remove="ClientApp\app\components\contact\contact.component.ts" />
     <None Remove="ClientApp\app\components\filter-supplier\filter-supplier.component.ts" />
     <None Remove="ClientApp\app\components\github-followers\github-followers.component.ts" />
     <None Remove="ClientApp\app\components\github-profile\github-profile.component.ts" />
+    <None Remove="ClientApp\app\components\login\login.component.ts" />
     <None Remove="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
     <None Remove="ClientApp\app\components\ngx-bootstrap\ngx.component.ts" />
+    <None Remove="ClientApp\app\components\no-access\no-access.component.ts" />
     <None Remove="ClientApp\app\components\not-found\not-found.component.ts" />
     <None Remove="ClientApp\app\components\panel\panel.component.ts" />
     <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
     <None Remove="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
     <None Remove="ClientApp\app\components\reactiveForm\username.validators.ts" />
+    <None Remove="ClientApp\app\components\signup\signup.component.ts" />
     <None Remove="ClientApp\app\components\tweet\tweet.component.ts" />
     <None Remove="ClientApp\app\directives\input-format.directive.ts" />
+    <None Remove="ClientApp\app\helpers\fake-backend.ts" />
     <None Remove="ClientApp\app\models\product.ts" />
     <None Remove="ClientApp\app\models\supplier.ts" />
+    <None Remove="ClientApp\app\services\auth.service.ts" />
     <None Remove="ClientApp\app\services\data.service.ts" />
+    <None Remove="ClientApp\app\services\order.service.ts" />
     <None Remove="ClientApp\app\services\posts.service.ts" />
     <None Remove="ClientApp\app\services\product.service.ts" />
     <None Remove="ClientApp\app\services\supplier.service.ts" />
@@ -55,24 +62,31 @@
     <TypeScriptCompile Include="ClientApp\app\common\app-error.ts" />
     <TypeScriptCompile Include="ClientApp\app\common\not-exist-error.ts" />
     <TypeScriptCompile Include="ClientApp\app\common\not-found-error.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\admin\admin.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\colapse\colapse.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\contact\contact.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\filter-supplier\filter-supplier.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\github-followers\github-followers.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\github-profile\github-profile.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\login\login.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\newCoursesForms\news-courses.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\ngx-bootstrap\ngx.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\no-access\no-access.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\not-found\not-found.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\panel\panel.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\signup-form.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\reactiveForm\username.validators.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\signup\signup.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\tweet\tweet.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\directives\input-format.directive.ts" />
+    <TypeScriptCompile Include="ClientApp\app\helpers\fake-backend.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\product.ts" />
     <TypeScriptCompile Include="ClientApp\app\models\supplier.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\auth.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\data.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\github-followers.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\order.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\posts.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\product.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\services\supplier.service.ts" />
