--- a/Estudos_Angular/package.json
+++ b/Estudos_Angular/package.json
@@ -62,6 +62,7 @@
     "zone.js": "0.8.12"
   },
   "dependencies": {
+    "angular2-jwt": "^0.2.3",
     "glyphicons": "^0.2.0",
     "ngx-bootstrap": "^2.0.2"
   }
