--- a/Estudos_Angular/package.json
+++ b/Estudos_Angular/package.json
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "angular2-jwt": "^0.2.3",
+    "animate.css": "^3.6.1",
     "glyphicons": "^0.2.0",
     "ngx-bootstrap": "^2.0.2"
   }
