--- a/Estudos_Angular/Estudos_Angular.csproj
+++ b/Estudos_Angular/Estudos_Angular.csproj
@@ -70,7 +70,7 @@
     <TypeScriptCompile Include="ClientApp\app\common\not-exist-error.ts" />
     <TypeScriptCompile Include="ClientApp\app\common\not-found-error.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\admin\admin.component.ts" />
-    <TypeScriptCompile Include="ClientApp\app\todos\animations.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\todos\animations.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\colapse\colapse.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\contact\contact.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\einstein-exemples\einstein-exemples.component.ts" />
